--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,8 +115,8 @@ install(TARGETS fmem
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 install(FILES
-  fmem.h
-  ${PROJECT_BINARY_DIR}/gen/fmem-export.h
+  gen/fmem.h
+  #${PROJECT_BINARY_DIR}/gen/fmem-export.h
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 include (CTest)
